--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@chakra-ui/icons": "1.0.5",
     "@chakra-ui/react": "1.2.1",
-    "@emotion/react": "11.1.4",
-    "@emotion/styled": "11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
     "@types/react-router-dom": "5.1.7",
-    "axios": "0.21.1",
+    "axios": "0.27.2",
     "framer-motion": "3.3.0-beta.22",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^7.11.0",
