--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
     "@types/react": "17.0.0",
@@ -35,8 +36,10 @@
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.2",
     "prettier": "^2.7.1",
-    "typescript": "4.1.3"
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
