--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -19,13 +19,13 @@
 
 # Offense count: 4
 # Configuration parameters: CountComments, CountAsOne, ExcludedMethods, AllowedMethods, AllowedPatterns, IgnoredMethods.
-Metrics/MethodLength:
-  Max: 21
+# Metrics/MethodLength:
+#   Max: 21
 
-# Offense count: 1
-Naming/AccessorMethodName:
-  Exclude:
-    - "app/controllers/api/v1/line_foods_controller.rb"
+# # Offense count: 1
+# Naming/AccessorMethodName:
+#   Exclude:
+#     - "app/controllers/api/v1/line_foods_controller.rb"
 
 # Offense count: 1
 # Configuration parameters: Include.
