--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,10 @@
     "framer-motion": "3.3.0-beta.22",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "use-media": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "@types/jest": "^28.1.4",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-responsive": "^8.0.5",
     "@types/react-router-dom": "5.1.7",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
