ESLintでerror出力された事象の解消

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,6 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
-    "@chakra-ui/icons": "1.0.5",
-    "@chakra-ui/react": "1.2.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@mui/icons-material": "^5.8.4",
@@ -34,10 +32,18 @@
     "@types/react-responsive": "^8.0.5",
     "@types/react-router-dom": "5.1.7",
     "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^28.1.2",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
@@ -47,7 +53,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
+    "fix": "npm run format && npm run lint:fix",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --fix --ext 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "browserslist": [
     ">0.2%",
