--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -20,15 +20,24 @@ PreCommit:
     enabled: true
     command: ["bundle", "exec", "rubocop", "-c", "./.rubocop.yml"]
     on_warn: fail # Treat all warnings as failures
+  ESLint:
+    enabled: true
+    required_executable: "npm"
+    command: ["npm", "run", "lint"]
+PostCheckout:
+  BundleInstall:
+    enabled: true
+  NpmInstall:
+    enabled: true
 #
 #  TrailingWhitespace:
 #    enabled: true
 #    exclude:
 #      - '**/db/structure.sql' # Ignore trailing whitespace in generated files
 #
-#PostCheckout:
-#  ALL: # Special hook name that customizes all hooks of this type
-#    quiet: true # Change all post-checkout hooks to only display output on failure
+# PostCheckout:
+#   BundleInstall:
+#     enabled: true
 #
 #  IndexTags:
 #    enabled: true # Generate a tags file with `ctags` each time HEAD changes
