--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,25 +44,32 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.2",
     "jest": "^28.1.2",
+    "lint-staged": "^13.0.4",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
+    "lint": "eslint --ext 'src/**/*.{js,jsx,ts,tsx}'",
     "fix": "npm run format && npm run lint:fix",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix --ext 'src/**/*.{js,jsx,ts,tsx}'"
+    "lint:fix": "eslint --fix --ext 'src/**/*.{js,jsx,ts,tsx}'",
+    "prepare": "cd .. && husky install frontend/.husky"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "lint-staged": {
+    "*.{src/**/*{js,jsx,ts,tsx}}": "eslint --ext",
+    "*.{js,jsx,ts,tsx}": "prettier --write"
+  }
 }
