--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,7 +69,6 @@
     "not op_mini all"
   ],
   "lint-staged": {
-    "*.{src/**/*{js,jsx,ts,tsx}}": "eslint --ext",
-    "*.{js,jsx,ts,tsx}": "prettier --write"
+    "*.{js,ts,jsx,tsx}": "eslint --ext"
   }
 }
