--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,6 @@
     "not op_mini all"
   ],
   "lint-staged": {
-    "src/**/*.{js,ts,jsx,tsx}": "eslint"
+    "src/**/*.{js,ts,jsx,tsx}": "eslint --ext 'src/**/*.{js,jsx,ts,tsx}'"
   }
 }
