package.jsonタイポ修正

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,7 +2,7 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2020": true,
+    "es2020": true
   },
   // npmを通して外部に公開されているルールのpluginsをインストールできる。ただし、外部ルールを読み込むところまでする（ルールの適用・有用化はpluginsではしない）
   // pluginsに記述する際は、あらかじめnpmで関係パッケージをインストールする必要がある。
@@ -11,7 +11,7 @@
     "react-hooks", // eslint-plugin-react-hooksパッケージを意味する
     "@typescript-eslint", // @typescript-eslint/eslint-pluginパッケージを意味する
     "import", // eslint-plugin-importを追加
-    "unused-imports", // 追加 使っていないimportを自動で削除用
+    "unused-imports" // 追加 使っていないimportを自動で削除用
   ],
   // extendsルール設定を拡張してくれる共有設定（外部の設定ファイルを読み込んでくれる）
   // pluginとの違いは、pluginは拡張ルールを読み込んだだけで、どのルール設定を適用させるか指定するものではない。extendsはどのルールを適用するかを決める
@@ -23,17 +23,17 @@
     "airbnb/hooks", // React hooks構文チェック
     "plugin:@typescript-eslint/recommended", // 型チェックが不要なルールを適用。@typescript-eslint/eslint-plugin
     "plugin:@typescript-eslint/recommended-requiring-type-checking", // 型チェックが必要なルールを適用
-    "prettier", // 追加 ESLintの情報に沿ってフォーマット
+    "prettier" // 追加 ESLintの情報に沿ってフォーマット
   ],
   // parserは、ESLintがプログラムの構文解析してくれる時に使われる。
   "parser": "@typescript-eslint/parser", // ESLintにTypescriptを理解させる
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true,
+      "jsx": true
     },
-    "ecmaVersion": 13,
+    "ecmaVersion": 2020,
     "sourceType": "module",
-    "project": ["./tsconfig.json"],
+    "project": ["./tsconfig.json"]
   },
   "ignorePatterns": ["build"], // 追加 .eslintignoreに対象外にしているが無いとコンパイルに時間がかかる
   // rulesは個別の解析ルールを設定する（ルールのレベル off,warn,error）
@@ -52,16 +52,16 @@
         "vars": "all",
         "varsIgnorePattern": "^_",
         "args": "after-used",
-        "argsIgnorePattern": "^_",
-      },
+        "argsIgnorePattern": "^_"
+      }
     ],
     "react/function-component-definition": [
       // アロー関数以外受け付けない設定
       "error",
       {
         "namedComponents": "arrow-function",
-        "unnamedComponents": "arrow-function",
-      },
+        "unnamedComponents": "arrow-function"
+      }
     ],
     "no-param-reassign": ["error", { "props": false }], // パラメーターのプロパティ変更を許可
     "import/extensions": [
@@ -71,15 +71,15 @@
         "js": "never",
         "jsx": "never",
         "ts": "never",
-        "tsx": "never",
-      },
+        "tsx": "never"
+      }
     ],
     "react/jsx-filename-extension": [
       // ファイル拡張子が.jsx、.tsx以外のファイルでJSXを使用した場合にエラーを発生させる。
       "error",
       {
-        "extensions": [".jsx", ".tsx"],
-      },
+        "extensions": [".jsx", ".tsx"]
+      }
     ],
     "react/react-in-jsx-scope": "off", // import React from 'react'が無くてもエラーを無くす
     "react/prop-types": "off", // TypeScriptでチェックしているから不要。offにする
@@ -87,23 +87,23 @@
       // void演算子の許可
       "error",
       {
-        "allowAsStatement": true,
-      },
+        "allowAsStatement": true
+      }
     ],
     "react/jsx-no-useless-fragment": "off", // react.Fragmentがなくてもエラーを吐かない
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   },
   "settings": {
     "import/resolver": {
       // importするファイルをjsだけではなく、tsを含むファイルを許可する
       "node": {
         "paths": ["src"],
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"]
       },
       "typescript": {
         "project": "./",
-        "alwaysTryTypes": true,
-      },
-    },
-  },
-};
+        "alwaysTryTypes": true
+      }
+    }
+  }
+}
