--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -56,7 +57,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint --max-warning=0 --ext 'src/**/*.{js,jsx,ts,tsx}'",
     "fix": "npm run format && npm run lint:fix",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix --ext 'src/**/*.{js,jsx,ts,tsx}'",
@@ -74,6 +75,6 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,ts,jsx,tsx}": "eslint --ext 'src/**/*.{js,jsx,ts,tsx}'"
+    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext 'src/**/*.{js,jsx,ts,tsx}'"
   }
 }
