--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warning=0 --ext 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint --max-warnings=0 --ext 'src/**/*.{js,jsx,ts,tsx}'",
     "fix": "npm run format && npm run lint:fix",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix --ext 'src/**/*.{js,jsx,ts,tsx}'",
