--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,10 +57,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warnings=0 --ext 'src/**/*.{js,jsx,ts,tsx}'",
-    "fix": "npm run format && npm run lint:fix",
+    "lint": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "eslint --fix --ext 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint --max-warnings=0 --fix --ext .jsx,.js,.tsx,.ts src/",
+    "all-fix": "npm run format && npm run lint:fix",
     "prepare": "cd .. && husky install frontend/.husky"
   },
   "browserslist": [
@@ -75,6 +75,6 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext 'src/**/*.{js,jsx,ts,tsx}'"
+    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/"
   }
 }
