--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -38,6 +38,7 @@
   "ignorePatterns": ["build"], // 追加 .eslintignoreに対象外にしているが無いとコンパイルに時間がかかる
   // rulesは個別の解析ルールを設定する（ルールのレベル off,warn,error）
   "rules": {
+    "no-console": "off",
     "react-hooks/exhaustive-deps": "off", // react-hooksでの依存配列チェック機能をoff
     "@typescript-eslint/no-unsafe-assignment": "off", // any型の割り当てを許可
     "@typescript-eslint/no-unsafe-member-access": "off", // any型へのアクセスを許可
@@ -91,7 +92,8 @@
       }
     ],
     "react/jsx-no-useless-fragment": "off", // react.Fragmentがなくてもエラーを吐かない
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "arrow-body-style": "off"
   },
   "settings": {
     "import/resolver": {
