--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "3.3.0-beta.22",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.40.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
@@ -24,7 +25,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
     "@types/react": "17.0.0",
