--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "axios": "0.27.2",
@@ -22,7 +23,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -49,6 +51,7 @@
     "husky": "^8.0.2",
     "jest": "^28.1.2",
     "lint-staged": "^13.0.4",
+    "npm-force-resolutions": "0.0.10",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.5",
     "typescript": "^4.4.4"
@@ -77,5 +80,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/"
+  },
+  "resolutions": {
+    "nth-check": "^2.0.1"
   }
 }
