--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,8 +79,8 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "../*.{rb,rake}": "bundle exec rubocop -c ./.rubocop.yml"
+    "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
+    "app/**/*.rb": "bundle exec rubocop -c ./.rubocop.yml"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
