--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,8 +79,7 @@
     }
   },
   "lint-staged": {
-    "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "app/**/*.rb": "cd ../app && bundle exec rubocop -c ./.rubocop.yml"
+    "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
