--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,7 +80,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "app/**/*.{rb.rake.ruby}": "cd .. && bundle exec rubocop -c ./.rubocop.yml"
+    "app/**/*.rb": "cd .. && bundle exec rubocop -c ./.rubocop.yml"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
