lint-stagedの設定コマンドを修正

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,7 +23,7 @@ AllCops:
 
 # Rails向けのRails copsを実行。"rubocop -R"と同じ
 Rails:
-  Enabled: true
+  Enabled: false
 
 # 日本語でのコメントを許可
 Style/AsciiComments:
