--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,8 +81,7 @@
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
     "app/**/*.rb": [
-      "cd ..",
-      "bundle exec rubocop -c ./.rubocop.yml"
+      "bundle exec rubocop"
     ]
   },
   "resolutions": {
