--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,7 +80,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "src/**/*.rb": [
+    "cd .. && app/**/*.rb": [
       "bundle exec rubocop"
     ]
   },
