--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,7 +83,7 @@
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
     "cd ../backend && app/**/*.rb": [
-      "bundle exec rubocop"
+      "cd ../backend && bundle exec rubocop"
     ]
   },
   "resolutions": {
