--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,7 +67,7 @@
     "lint:fix": "eslint --max-warnings=0 --fix --ext .jsx,.js,.tsx,.ts src/",
     "all-fix": "npm run format && npm run lint:fix",
     "prepare": "cd .. && husky install frontend/.husky",
-    "rubocop": "cd ../backend && bundle exec rubocop"
+    "rubocop": "bundle exec rubocop -c ./backend/.rubocop.yml"
   },
   "browserslist": [
     ">0.2%",
@@ -81,10 +81,9 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "backend/app/**/*.rb": [
-      "bundle exec rubocop"
-    ]
+    "gitDir": "../../",
+    "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts ./frontend/src/",
+    "backend/app/**/*.rb": "bundle exec rubocop -c ./backend/.rubocop.yml"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
