--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,8 +82,8 @@
   },
   "lint-staged": {
     "gitDir": "../",
-    "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts frontend/src/",
-    "backend/app/**/*.rb": "bundle exec rubocop -c ./backend/.rubocop.yml"
+    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
+    "*.rb": "bundle exec rubocop"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
