--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,9 +81,9 @@
     }
   },
   "lint-staged": {
-    "gitDir": "../",
-    "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "*.rb": "bundle exec rubocop"
+    "gitDir": "./frontend/",
+    "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts frontend/src/",
+    "backend/app/**/*.rb": "bundle exec rubocop -c backend/.rubocpo.yml"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
