--- a/frontend/package.json
+++ b/frontend/package.json
@@ -81,7 +81,7 @@
     }
   },
   "lint-staged": {
-    "gitDir": "./frontend/",
+    "gitDir": "../",
     "frontend/src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts frontend/src/",
     "backend/app/**/*.rb": "bundle exec rubocop -c backend/.rubocpo.yml"
   },
