--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,7 +82,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": "eslint --max-warnings=0 --ext .jsx,.js,.tsx,.ts src/",
-    "backend/app/**/*.rb": "bundle exec rubocop -c backend/.rubocpo.yml"
+    "backend/app/**/*.rb": "cd ../backend && bundle exec rubocop -c backend/.rubocpo.yml"
   },
   "resolutions": {
     "nth-check": "^2.0.1"
