OAuth2.0を使ったGoogle認証の実装（react-google-loginとgapi-scriptの導入）

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -57,3 +57,9 @@ gem 'rails_same_site_cookie'
 
 # redisによるセッション管理を実現(gem redis-railsをよりも推奨されるgem)
 gem 'redis-actionpack'
+
+# Oauth認証
+gem 'omniauth'
+gem 'omniauth-google-oauth2'
+gem 'omniauth-facebook'
+gem 'omniauth-rails_csrf_protection'
