--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,13 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.5",
     "axios": "0.27.2",
+    "dotenv": "^16.0.3",
     "framer-motion": "3.3.0-beta.22",
+    "gapi-script": "^1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.40.0",
     "react-responsive": "^9.0.0",
     "react-router-dom": "5.2.0",
@@ -30,9 +34,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@types/gapi": "0.0.44",
+    "@types/gapi.auth2": "0.0.57",
     "@types/jest": "^28.1.4",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-facebook-login": "^4.1.5",
     "@types/react-responsive": "^8.0.5",
     "@types/react-router-dom": "5.1.7",
     "@types/styled-components": "^5.1.25",
